--- a/pages/cinema-selection.html
+++ b/pages/cinema-selection.html
@@ -58,40 +58,10 @@
                 fill="#FCFC65" />
         </symbol>
 
-        <symbol id="icon-clock" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" fill="none">
-            <g clip-path="url(#clip0_8063_1166)">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M6.56283 1.16602C6.56283 0.924391 6.7587 0.728516 7.00033 0.728516C10.4636 0.728516 13.2712 3.53606 13.2712 6.99935C13.2712 10.4626 10.4636 13.2702 7.00033 13.2702C3.53704 13.2702 0.729492 10.4626 0.729492 6.99935C0.729492 6.75772 0.925368 6.56185 1.16699 6.56185C1.40862 6.56185 1.60449 6.75772 1.60449 6.99935C1.60449 9.97939 4.02029 12.3952 7.00033 12.3952C9.98036 12.3952 12.3962 9.97939 12.3962 6.99935C12.3962 4.01931 9.98036 1.60352 7.00033 1.60352C6.7587 1.60352 6.56283 1.40764 6.56283 1.16602ZM7.00033 4.81185C7.24195 4.81185 7.43783 5.00772 7.43783 5.24935V7.14518H9.33366C9.57528 7.14518 9.77116 7.34106 9.77116 7.58268C9.77116 7.82431 9.57528 8.02018 9.33366 8.02018H7.00033C6.7587 8.02018 6.56283 7.82431 6.56283 7.58268V5.24935C6.56283 5.00772 6.7587 4.81185 7.00033 4.81185Z"
-                    fill="#F1F1F3" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M5.30841 1.39791C5.39542 1.62333 5.28323 1.8766 5.05782 1.96361C4.97532 1.99546 4.89379 2.02928 4.81329 2.06502C4.59245 2.16306 4.33395 2.06351 4.23591 1.84267C4.13787 1.62183 4.23742 1.36332 4.45826 1.26528C4.55188 1.22372 4.64673 1.18437 4.74271 1.14732C4.96812 1.06031 5.2214 1.1725 5.30841 1.39791ZM3.29482 2.47284C3.46146 2.64781 3.4547 2.92473 3.27973 3.09137C3.21575 3.1523 3.15327 3.21478 3.09235 3.27875C2.92571 3.45372 2.64878 3.46048 2.47381 3.29384C2.29884 3.12721 2.29209 2.85028 2.45872 2.67531C2.52946 2.60103 2.60201 2.52849 2.67628 2.45775C2.85126 2.29111 3.12818 2.29787 3.29482 2.47284ZM1.84364 4.23493C2.06448 4.33297 2.16403 4.59147 2.06599 4.81231C2.03026 4.89281 1.99644 4.97434 1.96459 5.05684C1.87758 5.28226 1.6243 5.39445 1.39889 5.30744C1.17348 5.22042 1.06128 4.96715 1.1483 4.74174C1.18535 4.64575 1.22469 4.55091 1.26626 4.45728C1.3643 4.23644 1.6228 4.13689 1.84364 4.23493Z"
-                    fill="#F1F1F3" />
-            </g>
-            <defs>
-                <clipPath id="clip0_8063_1166">
-                    <rect width="14" height="14" fill="white" />
-                </clipPath>
-            </defs>
-        </symbol>
-
         <symbol id="icon-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
             <path
                 d="M19 11.75V12.25C19 12.5261 18.7762 12.75 18.5 12.75H12.75V18.5C12.75 18.7761 12.5261 19 12.25 19H11.75C11.4739 19 11.25 18.7761 11.25 18.5V12.75H5.5C5.22386 12.75 5 12.5261 5 12.25V11.75C5 11.4739 5.22386 11.25 5.5 11.25H11.25V5.5C11.25 5.22385 11.4739 5 11.75 5H12.25C12.5261 5 12.75 5.22385 12.75 5.5V11.25H18.5C18.7762 11.25 19 11.4739 19 11.75Z"
                 fill="currentColor" />
-        </symbol>
-
-        <symbol id="icon-massage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="none">
-            <path d="M11.5111 6.04102L8.66745 8.33053C8.12931 8.75244 7.37493 8.75244 6.83679 8.33053L3.96875 6.04102"
-                stroke="#9797AA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M4.59159 2.33398H10.8769C11.7831 2.34415 12.6457 2.72727 13.2637 3.39412C13.8817 4.06097 14.2011 4.95334 14.1477 5.8634V10.2153C14.2011 11.1254 13.8817 12.0177 13.2637 12.6846C12.6457 13.3514 11.7831 13.7346 10.8769 13.7447H4.59159C2.64498 13.7447 1.33301 12.1611 1.33301 10.2153V5.8634C1.33301 3.91762 2.64498 2.33398 4.59159 2.33398Z"
-                stroke="#9797AA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-        </symbol>
-
-        <symbol id="icon-menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-            <path d="M4 7L7 7M20 7L11 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-            <path d="M20 17H17M4 17L13 17" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-            <path d="M4 12H7L20 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
         </symbol>
 
         <symbol id="icon-user" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
@@ -103,35 +73,6 @@
                 stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
         </symbol>
 
-        <symbol id="icon-heart-active" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-            <path
-                d="M8.10627 18.2471C5.29819 16.0836 2 13.5424 2 9.13734C2 4.27441 7.50016 0.825708 12 5.50088L14 7.49952C14.2929 7.79236 14.7678 7.79228 15.0607 7.49933C15.3535 7.20638 15.3534 6.73151 15.0605 6.43867L13.1285 4.50736C17.3685 1.40333 22 4.67489 22 9.13734C22 13.5424 18.7018 16.0835 15.8937 18.2471C15.6019 18.4719 15.3153 18.6927 15.0383 18.9111C14 19.7296 13 20.5002 12 20.5002C11 20.5002 10 19.7296 8.96173 18.9111C8.68471 18.6927 8.39814 18.4719 8.10627 18.2471Z"
-                fill="currentcolor" />
-        </symbol>
-
-        <symbol id="icon-ticket" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-            <path
-                d="M12 11.75V12.25M12 8V8.5M12 15.5V16M19 19C19.5304 19 20.0391 18.7893 20.4142 18.4142C20.7893 18.0391 21 17.5304 21 17V14C20.4696 14 19.9609 13.7893 19.5858 13.4142C19.2107 13.0391 19 12.5304 19 12C19 11.4696 19.2107 10.9609 19.5858 10.5858C19.9609 10.2107 20.4696 10 21 10V7C21 6.46957 20.7893 5.96086 20.4142 5.58579C20.0391 5.21071 19.5304 5 19 5H5C4.46957 5 3.96086 5.21071 3.58579 5.58579C3.21071 5.96086 3 6.46957 3 7V10C3.53043 10 4.03914 10.2107 4.41421 10.5858C4.78929 10.9609 5 11.4696 5 12C5 12.5304 4.78929 13.0391 4.41421 13.4142C4.03914 13.7893 3.53043 14 3 14V17C3 17.5304 3.21071 18.0391 3.58579 18.4142C3.96086 18.7893 4.46957 19 5 19H19Z"
-                stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-        </symbol>
-
-        <symbol id="icon-all-comment" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
-            <path d="M9 15L15 9M15 9H10.5M15 9V13.5" stroke="#B3E5E5" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round" />
-            <path
-                d="M2 12C2 7.28595 2 4.92893 3.46447 3.46447C4.92893 2 7.28595 2 12 2C16.714 2 19.0711 2 20.5355 3.46447C22 4.92893 22 7.28595 22 12C22 16.714 22 19.0711 20.5355 20.5355C19.0711 22 16.714 22 12 22C7.28595 22 4.92893 22 3.46447 20.5355C2 19.0711 2 16.714 2 12Z"
-                stroke="#B3E5E5" stroke-width="1.5" />
-        </symbol>
-
-        <symbol id="icon-more-comment" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" fill="none">
-            <path
-                d="M3.33301 20.0007C3.33301 12.1439 3.33301 8.21554 5.77378 5.77476C8.21456 3.33398 12.1429 3.33398 19.9997 3.33398C27.8564 3.33398 31.7848 3.33398 34.2256 5.77476C36.6663 8.21554 36.6663 12.1439 36.6663 20.0007C36.6663 27.8574 36.6663 31.7858 34.2256 34.2265C31.7848 36.6673 27.8564 36.6673 19.9997 36.6673C12.1429 36.6673 8.21456 36.6673 5.77378 34.2265C3.33301 31.7858 3.33301 27.8574 3.33301 20.0007Z"
-                stroke="#F1F1F3" stroke-width="1.5" />
-            <path d="M15 14.166L20 19.166L25 14.166" stroke="#F1F1F3" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round" />
-            <path d="M15 20.834L20 25.834L25 20.834" stroke="#F1F1F3" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round" />
-        </symbol>
 
         <symbol id="icon-movie" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
             fill="none">
@@ -219,6 +160,15 @@
                 d="M3.25 10.1433C3.25 5.24427 7.15501 1.25 12 1.25C16.845 1.25 20.75 5.24427 20.75 10.1433C20.75 12.5084 20.076 15.0479 18.8844 17.2419C17.6944 19.4331 15.9556 21.3372 13.7805 22.3539C12.6506 22.882 11.3494 22.882 10.2195 22.3539C8.04437 21.3372 6.30562 19.4331 5.11556 17.2419C3.92403 15.0479 3.25 12.5084 3.25 10.1433ZM12 2.75C8.00843 2.75 4.75 6.04748 4.75 10.1433C4.75 12.2404 5.35263 14.5354 6.4337 16.526C7.51624 18.5192 9.04602 20.1496 10.8546 20.995C11.5821 21.335 12.4179 21.335 13.1454 20.995C14.954 20.1496 16.4838 18.5192 17.5663 16.526C18.6474 14.5354 19.25 12.2404 19.25 10.1433C19.25 6.04748 15.9916 2.75 12 2.75ZM12 7.75C10.7574 7.75 9.75 8.75736 9.75 10C9.75 11.2426 10.7574 12.25 12 12.25C13.2426 12.25 14.25 11.2426 14.25 10C14.25 8.75736 13.2426 7.75 12 7.75ZM8.25 10C8.25 7.92893 9.92893 6.25 12 6.25C14.0711 6.25 15.75 7.92893 15.75 10C15.75 12.0711 14.0711 13.75 12 13.75C9.92893 13.75 8.25 12.0711 8.25 10Z"
                 fill="#7C7C8D" />
         </symbol>
+
+        <symbol id="icon-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
+            <path d="M14.8281 14.8284L16.2423 16.2426" stroke="#fff" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round" />
+            <path d="M7.75781 7.75732L11.76 11.7595" stroke="#fff" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round" />
+            <path d="M7.75691 16.2426L16.2422 7.75732" stroke="#fff" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round" />
+        </symbol>
     </svg>
 
     <div id="scroll"></div>
@@ -272,7 +222,7 @@
 
     <div class="menu-mobile">
         <!--home-->
-        <a href="/index.html" class="menu-mobile__link active">
+        <a href="index.html" class="menu-mobile__link active">
             <svg class="icons-menu-mobile">
                 <use href="#icon-home"></use>
             </svg>
@@ -299,8 +249,8 @@
             </span>
         </a>
         <!--search-->
-        <a href="#" class="menu-mobile__link">
-            <svg class="icons-menu-mobile">
+        <a href="#" class="menu-mobile__link icon-search-mobile">
+            <svg class="icons-menu-mobile icon-search">
                 <use href="#icon-search"></use>
             </svg>
             <span class="menu-mobile__text">
@@ -316,6 +266,21 @@
                 حساب
             </span>
         </a>
+    </div>
+    <div class="search-mobile">
+        <div class="search-mobile__header">
+            <svg class="icon-close-search">
+                <use href="#icon-close"></use>
+            </svg>
+        </div>
+        <div class="search-mobile__input">
+            <svg>
+                <use href="#icon-search"></use>
+            </svg>
+            <input type="text" class="search-mobile__text-input" autofocus placeholder="جستجو">
+        </div>
+        <div class="search-mobile__result">
+        </div>
     </div>
 
     <section class="info-movie">
@@ -451,6 +416,7 @@
     </footer>
 
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/components/search-mobile.js"></script>
     <script type="module" src="/src/components/read-info-movie.js"></script>
     <script type="module" src="/src/components/filterDays.js"></script>
     <script type="module" src="/src/components/ticketCinemas.js"></script>
