Update JavaScript modules

--- a/pages/cinema-selection.html
+++ b/pages/cinema-selection.html
@@ -415,12 +415,7 @@
         </div>
     </footer>
 
-    <script type="module" src="/src/main.js"></script>
-    <script type="module" src="/src/components/search-mobile.js"></script>
-    <script type="module" src="/src/components/read-info-movie.js"></script>
-    <script type="module" src="/src/components/filterDays.js"></script>
-    <script type="module" src="/src/components/ticketCinemas.js"></script>
-    <script type="module" src="/src/components/submitTicket.js"></script>
+    <script type="module" src="../src/selecteCinema.js"></script>
 </body>
 
 </html>
