create page seat selection

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="loader"></div>
     </div>
 
-    <div id="header-placeholder"></div>
+    <!-- <div id="header-placeholder"></div> -->
     <header id="header">
         <div class="header-top container">
             <div class="header-top__right">
@@ -345,9 +345,8 @@
             </div>
         </div>
     </footer>
-    
+
     <script type="module" src="src/main.js"></script>
-    <script src="src/layout.js"></script>
 </body>
 
 </html>
