Styling the seat selection page

--- a/pages/set-selection.html
+++ b/pages/set-selection.html
@@ -213,10 +213,50 @@
             <div class="info-selection__stage">
                 <div class="stage">
                     <div class="stage__screen">
-                        <span>صفحه نمایش</span>
+                        <svg>
+                            <use href="#shape-screen"></use>
+                        </svg>
                     </div>
-                    <div class="stage__seats"></div>
-                    <div class="stage__seats-guide"></div>
+                    <div class="stage__seats">
+                        <div class="seats">
+                            <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+                        </div>
+
+                        <div class="seats-count">
+                            <div class="counter">
+                                <svg class="selected">
+                                    <use href="#icon-chair"></use>
+                                </svg>
+                                <div class="seats-counter">
+                                    <span class="amount">2</span>
+                                    <label for="">صندلی انتخاب شده</label>
+                                </div>
+                            </div>
+                            <div class="seats-position">
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="stage__seats-guide">
+                        <div class="guide">
+                            <svg class="available">
+                                <use href="#icon-chair"></use>
+                            </svg>
+                            <span>موجود</span>
+                        </div>
+                        <div class="guide">
+                            <svg class="reserved">
+                                <use href="#icon-chair"></use>
+                            </svg>
+                            <span>رزرو شده</span>
+                        </div>
+                        <div class="guide">
+                            <svg class="selected">
+                                <use href="#icon-chair"></use>
+                            </svg>
+                            <span>انتخاب شده</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="selected-seats"></div>
             </div>
