update file paths

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="src/components/loading.js" defer></script>
-    <link rel="stylesheet" href="styles/base/reset.css">
-    <link rel="stylesheet" href="styles/base/palet-color.css">
-    <link rel="stylesheet" href="styles/base/font.css">
-    <link rel="stylesheet" href="styles/base/style-default.css">
-    <link rel="stylesheet" href="styles/components/header.css">
-    <link rel="stylesheet" href="styles/components/navScroll.css">
-    <link rel="stylesheet" href="styles/pages/style.css">
-    <link rel="stylesheet" href="styles/components/footer.css">
-    <link rel="shortcut icon" href="assets/images/logo/Vector.svg" type="svg">
+    <link rel="stylesheet" href="/styles/base/reset.css">
+    <link rel="stylesheet" href="/styles/base/palet-color.css">
+    <link rel="stylesheet" href="/styles/base/font.css">
+    <link rel="stylesheet" href="/styles/base/style-default.css">
+    <link rel="stylesheet" href="/styles/components/header.css">
+    <link rel="stylesheet" href="/styles/components/navScroll.css">
+    <link rel="stylesheet" href="/styles/pages/style.css">
+    <link rel="stylesheet" href="/styles/components/footer.css">
+    <link rel="shortcut icon" href="/assets/images/logo/Vector.svg" type="svg">
     <script src="src/icons.js"></script>
     <title>Ticketor | رزرو بلیط سینما</title>
 </head>
