Update file paths

--- a/pages/login.html
+++ b/pages/login.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/base/reset.css">
-    <link rel="stylesheet" href="/styles/base/font.css">
-    <link rel="stylesheet" href="/styles/base/palet-color.css">
-    <link rel="stylesheet" href="/styles/base/style-default.css">
-    <link rel="stylesheet" href="/styles/pages/login.css">
-    <link rel="shortcut icon" href="/assets/images/logo/Vector.svg" type="svg">
+    <link rel="stylesheet" href="../styles/base/reset.css">
+    <link rel="stylesheet" href="../styles/base/font.css">
+    <link rel="stylesheet" href="../styles/base/palet-color.css">
+    <link rel="stylesheet" href="../styles/base/style-default.css">
+    <link rel="stylesheet" href="../styles/pages/login.css">
+    <link rel="shortcut icon" href="../assets/images/logo/Vector.svg" type="svg">
 
     <title>ورود | ثبت‌نام</title>
 </head>
@@ -18,13 +18,13 @@
     <div class="login">
         <div class="login__wrapper container">
             <div class="login__image">
-                <img src="/assets/images/login/image-login.png" alt="">
+                <img src="../assets/images/login/image-login.png" alt="">
             </div>
             <div class="login__form">
                 <div class="login__header">
                     <div class="login__logo">
-                        <img src="/assets/images/logo/Group.svg" alt="">
-                        <img src="/assets/images/logo/Vector.svg" alt="">
+                        <img src="../assets/images/logo/Group.svg" alt="">
+                        <img src="../assets/images/logo/Vector.svg" alt="">
                     </div>
                     <h2 class="login__title">ورود</h2>
                 </div>
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <script src="/src/login.js"></script>
+    <script src="../src/login.js"></script>
 </body>
 
 </html>
