--- a/pages/movie-page.html
+++ b/pages/movie-page.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/base/reset.css">
-    <link rel="stylesheet" href="/styles/base/palet-color.css">
-    <link rel="stylesheet" href="/styles/base/font.css">
-    <link rel="stylesheet" href="/styles/base/style-default.css">
-    <link rel="stylesheet" href="/styles/components/header.css">
-    <link rel="stylesheet" href="/styles/components/navScroll.css">
-    <link rel="stylesheet" href="/styles/pages/movie-page.css">
-    <link rel="stylesheet" href="/styles/components/footer.css">
-    <link rel="shortcut icon" href="/assets/images/logo/Vector.svg" type="svg">
+    <link rel="stylesheet" href="../styles/base/reset.css">
+    <link rel="stylesheet" href="../styles/base/palet-color.css">
+    <link rel="stylesheet" href="../styles/base/font.css">
+    <link rel="stylesheet" href="../styles/base/style-default.css">
+    <link rel="stylesheet" href="../styles/components/header.css">
+    <link rel="stylesheet" href="../styles/components/navScroll.css">
+    <link rel="stylesheet" href="../styles/pages/movie-page.css">
+    <link rel="stylesheet" href="../styles/components/footer.css">
+    <link rel="shortcut icon" href="../assets/images/logo/Vector.svg" type="svg">
     <script src="../src/icons.js"></script>
     <title>Ticketor | صفحه فیلم</title>
 </head>
@@ -26,8 +26,8 @@
         <div class="header-top container">
             <div class="header-top__right">
                 <div class="header-top__logo">
-                    <img src="/assets/images/logo/Vector.svg" alt="" class="vector-logo">
-                    <img src="/assets/images/logo/Group.svg" alt="" class="text-logo">
+                    <img src="../assets/images/logo/Vector.svg" alt="" class="vector-logo">
+                    <img src="../assets/images/logo/Group.svg" alt="" class="text-logo">
                 </div>
 
                 <div class="header-top__links">
@@ -80,7 +80,7 @@
 
     <div class="menu-mobile">
         <!--home-->
-        <a href="index.html" class="menu-mobile__link active">
+        <a href="../index.html" class="menu-mobile__link active">
             <svg class="icons-menu-mobile">
                 <use href="#icon-home"></use>
             </svg>
@@ -292,17 +292,17 @@
         <div class="footer__wrapper">
             <div class="footer__description">
                 <div class="footer__logo">
-                    <img src="/assets/images/logo/Vector.svg" alt="" class="vector-logo">
-                    <img src="/assets/images/logo/Group.svg" alt="" class="text-logo">
+                    <img src="../assets/images/logo/Vector.svg" alt="" class="vector-logo">
+                    <img src="../assets/images/logo/Group.svg" alt="" class="text-logo">
                 </div>
                 <p class="footer__text">
                     لورم ایپسوم به سادگی متنی ساختگی در صنعت چاپ و حروفچینی است. لورم ایپسوم از دهه ۱۵۰۰ میلادی، متن
                     ساختگی استاندارد این صنعت بوده است، زمانی که یک
                 </p>
                 <div class="footer__social">
-                    <img src="/assets/images/social/instagram.svg" alt="" class="social__image">
-                    <img src="/assets/images/social/linkedin.svg" alt="" class="social__image">
-                    <img src="/assets/images/social/x-twitter.svg" alt="" class="social__image">
+                    <img src="../assets/images/social/instagram.svg" alt="" class="social__image">
+                    <img src="../assets/images/social/linkedin.svg" alt="" class="social__image">
+                    <img src="../assets/images/social/x-twitter.svg" alt="" class="social__image">
                 </div>
             </div>
             <div class="footer__links">
